--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@fontsource-variable/raleway": "^5.0.17",
     "@tanstack/react-query": "^5.22.2",
     "axios": "^1.6.7",
+    "crypto-js": "^4.2.0",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.5",
     "react": "^18.2.0",
@@ -25,6 +26,7 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
