--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
     "devDependencies": {
         "@types/bcryptjs": "^2.4.6",
         "@types/cors": "^2.8.17",
+        "@types/crypto-js": "^4.2.2",
         "@types/dotenv-safe": "^8.1.5",
         "@types/express": "^4.17.21",
         "@types/jsonwebtoken": "^9.0.5",
@@ -32,6 +33,7 @@
         "axios": "^1.6.7",
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
+        "crypto-js": "^4.2.0",
         "dotenv-safe": "^9.0.0",
         "express": "^4.18.2",
         "firebase": "^10.8.0",
