--- a/api/package.json
+++ b/api/package.json
@@ -7,9 +7,7 @@
         "dev": "nodemon",
         "build": "tsc -p .",
         "prod": "npm run build && node dist/index.js",
-        "test": "jest",
-        "test:watch": "jest --watchAll",
-        "test:coverage": "jest --coverage"
+        "lint": "tsc"
     },
     "type": "commonjs",
     "keywords": [],
